[gd_scene load_steps=5 format=2]

[ext_resource path="res://MainMenu.gd" type="Script" id=1]
[ext_resource path="res://Fonts/Boxy-Bold.ttf" type="DynamicFontData" id=2]

[sub_resource type="DynamicFont" id=1]
size = 26
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]
extra_spacing_top = 3
font_data = ExtResource( 2 )

[node name="MainMenu" type="Node"]
script = ExtResource( 1 )

[node name="Control" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TitleContainer" type="VBoxContainer" parent="Control"]
anchor_right = 1.0
margin_top = 100.0
margin_bottom = 18.0

[node name="Title" type="Label" parent="Control/TitleContainer"]
margin_right = 800.0
margin_bottom = 30.0
custom_fonts/font = SubResource( 1 )
text = "THE CRAWLING SPIDER"
align = 1

[node name="MenuItems" type="VBoxContainer" parent="Control"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -87.0
margin_top = -52.0
margin_right = 87.0
margin_bottom = 52.0
custom_constants/separation = 16
alignment = 1

[node name="Play" type="Button" parent="Control/MenuItems"]
margin_right = 174.0
margin_bottom = 27.0
custom_fonts/font = SubResource( 2 )
text = "PLAY"

[node name="Options" type="Button" parent="Control/MenuItems"]
margin_top = 43.0
margin_right = 174.0
margin_bottom = 70.0
custom_fonts/font = SubResource( 2 )
text = "OPTIONS"

[node name="HighScore" type="Button" parent="Control/MenuItems"]
margin_top = 86.0
margin_right = 174.0
margin_bottom = 113.0
custom_fonts/font = SubResource( 2 )
text = "HIGH SCORE"

[node name="Credits" type="Button" parent="Control/MenuItems"]
margin_top = 129.0
margin_right = 174.0
margin_bottom = 156.0
custom_fonts/font = SubResource( 2 )
text = "CREDITS"

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2( 399.584, 225.335 )
current = true
[connection signal="pressed" from="Control/MenuItems/Play" to="." method="_on_Play_pressed"]
[connection signal="pressed" from="Control/MenuItems/Options" to="." method="_on_Options_pressed"]
[connection signal="pressed" from="Control/MenuItems/HighScore" to="." method="_on_HighScore_pressed"]
[connection signal="pressed" from="Control/MenuItems/Credits" to="." method="_on_Credits_pressed"]
